--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -7,7 +7,7 @@
     border: 1px solid #ddd;
     border-radius: 8px;
     padding: 16px;
-    background-color: #f9f9f9;
+    background-color: #e7e3f8;
 }
 
 .postTitle {
